--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
+    "@types/yup": "^0.29.9",
     "formik": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -17,10 +18,12 @@
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
     "typescript": "^4.0.5",
-    "web-vitals": "^0.2.4"
+    "web-vitals": "^0.2.4",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
+    "@types/styled-components": "^5.1.4",
     "webpack": "^4.44.2"
   },
   "scripts": {
