--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
     "@types/react": "^16.9.55",
     "@types/react-dom": "^16.9.9",
     "@types/yup": "^0.29.9",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "eslint-config-airbnb": "^18.2.0",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jsx-a11y": "^6.3.0",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4",
     "formik": "^2.2.1",
     "polished": "^4.0.3",
     "react": "^17.0.1",
@@ -25,6 +31,11 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
+    "eslint": "6.8.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.1.2",
     "webpack": "^4.44.2"
   },
   "scripts": {
@@ -32,12 +43,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
