--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "polished": "^4.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "styled-components": "^5.2.1",
@@ -31,6 +32,7 @@
   "devDependencies": {
     "@types/react-router-dom": "^5.1.6",
     "@types/styled-components": "^5.1.4",
+    "@typescript-eslint/parser": "^4.6.1",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.15.0",
     "eslint-import-resolver-typescript": "^2.3.0",
